added entry point for llama vision and added swagger entry to test
